--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "phpoffice/phpword": "^1.1",
+        "reedware/laravel-relation-joins": "^4.0",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
