--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "phpoffice/phpword": "^1.1",
-        "tymon/jwt-auth": "^2.0"
+        "tymon/jwt-auth": "^2.0",
+        "wapmorgan/morphos": "^3.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
