--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "phpoffice/phpspreadsheet": "^1.29",
         "phpoffice/phpword": "^1.1",
         "tymon/jwt-auth": "^2.0",
         "wapmorgan/morphos": "^3.2"
