--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
         "create-react-app": "^1.2.1",
         "file-saver": "^2.0.5",
         "postcss-preset-env": "^8.3.2",
-        "react": "^18.0.0",
+        "react": "^17.0.0||^18.0.0",
         "react-dadata": "^2.16.0",
-        "react-dom": "^18.0.0",
+        "react-dom": "^17.0.0||^18.0.0",
         "react-redux": "^8.0.5",
         "react-router": "^6.10.0",
         "react-router-dom": "^6.10.0",
